# Cpp_python_protobuf

./: .gitignore  CMakeLists.txt  README.md
cpp_client/: CMakeLists.txt
cpp_client/include/: socket_client.h
cpp_client/src/: main.cpp  socket_client.cpp  socket_server.cpp
cpp_server/: CMakeLists.txt  kinMsg.proto
cpp_server/include/: socket_server.h
cpp_server/src/: socket_server.cpp
messages/: CMakeLists.txt
python_scripts/: tcp_client.py  tcp_server.py
